changes in ExcelUtils class